--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ h1 {
   color: #4ECCA3;
 }
 
+a {
+  font: 1.5rem, "Indie Flower", cursive;
+  color: #4ECCA3;
+  }
+
 p {
   font-size: 2rem;
   color: #4ECCA3;
