--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  margin: 30px;
+  left-margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
@@ -23,8 +23,9 @@ h1 {
 }
 
 a {
-  font: 1.5rem, "Indie Flower", cursive;
+  font-size: 1.5rem;
   color: #4ECCA3;
+  font-family: 'Indie Flower', cursive;
   }
 
 p {
